--- a/src/app/components/themeToggle/themeToggle.module.css
+++ b/src/app/components/themeToggle/themeToggle.module.css
@@ -1,17 +1,20 @@
 .container {
-    width: 40px;
-    height: 20px;
-    border-radius: 50px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-  }
-  
-  .ball{
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    position: absolute;
-  }
+  width: 40px;
+  height: 20px;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  background-color: lightgray;
+}
+
+.ball {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  left: 2px; /* Kezdőpozíció */
+  transition: left 2s ease, background-color 2s ease; /* Átmenet a pozícióra és a háttérszínre */
+}
